# vedgyproject

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  Procfile  README.md  app.py  create_admin.py  docker-compose.yml  nixpacks.toml  pyproject.toml  railway.json  requirements-test.txt  requirements.txt  run-django.py  run.py  test_b2_connection_fixed.py
.beads/: issues.jsonl  metadata.json
.claude/: settings.local.json
.claude/rules/: standards-django-flutter-integration.md  standards-django-ninja.md  standards-flutter-riverpod.md
backend/: .gitignore  pytest.ini  requirements-django.txt
backend/app/: __init__.py  forms.py
backend/config/: decorators.py  middleware.py  settings.py  urls.py
backend/fixtures/: seed_data.json
frontend/: analysis_options.yaml  pubspec.yaml
plans/: 2026-02-11-flutter-frontend-overview.md  2026-02-11-flutter-phase1-api-foundation.md  2026-02-11-flutter-phase2-flutter-scaffold.md  2026-02-11-flutter-phase3-core-screens.md  2026-02-11-flutter-phase4-listing-management.md  2026-02-11-flutter-phase5-polish-parity.md  2026-02-11-flutter-phase6-mobile.md  2026-03-14-project-status.md
templates/: _listings_partial.html  admin_dashboard.html  admin_login.html  admin_review_listing.html  base.html  create_listing.html  dashboard.html  dashboard.html.bak  index.html  listing_detail.html  listings.html  login.html  paddle_checkout.html  pay_listing.html  preview_listing.html  privacy.html  renew_listing.html  signup.html  terms.html  upgrade.html
tests/: conftest.py
(+190 files in other folders)
